# pyxirr

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Makefile  README.md  bench-requirements.txt  dev-requirements.txt  pyproject.toml  pyxirr.pyi
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: bench.yaml  ci.yaml  ci.yml  publish.yaml  test.yaml
benches/: comparison.rs  input.rs  main.rs  npf.rs
c/: Cargo.toml  README.md
c/src/: lib.rs
core/: Cargo.toml
core/src/: broadcasting.rs  lib.rs  models.rs  optimize.rs  periodic.rs  private_equity.rs  pyo3.rs  utils.rs  vectorized.rs
core/src/scheduled/: day_count.rs  xirr.rs  xnfv.rs
dev/bench/: data.js  index.html  main.js  styles.css
docs/: _config.yaml  functions.md  index.md  install.md  private_equity.md
docs/_includes/: head.html
docs/_inline/: day_count_conventions.md
docs/_inline/pe/: direct_alpha.md  dpi.md  ks_pme.md  ks_pme_flows.md  ln_pme.md  ln_pme_nav.md  m_pme.md  moic.md  pme_plus.md  pme_plus_flows.md  pme_plus_lambda.md  rvpi.md  tvpi.md
docs/_layouts/: math.html
docs/bench/: data.js  main.js
docs/bench/vectorization/: index.html
python/pyxirr/: __init__.py  _pyxirr.pyi  pe.pyi
src/: broadcasting.rs  conversions.rs  lib.rs  xirr.rs
src/core/: fv.rs  irr.rs  mirr.rs  mod.rs  models.rs  optimize.rs  periodic.rs  pmt.rs  private_equity.rs  pv.rs  utils.rs  xirr.rs
src/core/scheduled/: day_count.rs  mod.rs  xfv.rs  xirr.rs  xnfv.rs
tests/: common.rs  test_conversion.rs  test_core_xirr.rs  test_core_xnpv.rs  test_functions.rs  test_fv.rs  test_irr.rs  test_mirr.rs  test_periodic.rs  test_pv.rs  test_scheduled.rs  test_xirr.rs  test_xnpv.rs
tests/common/: cases.rs  helpers.rs  mod.rs
tests/samples/: 1938.csv  30-20.csv  equal_payments.csv  minus_0_13.csv  minus_0_993.csv  random_10000.csv  random_500.csv  rw-100.csv  rw-1000.csv  rw-50.csv  rw-500.csv  xnfv.csv  zeros.csv
