[package]
name = "pyxirr"
version = "0.10.5"
authors = ["Anexen"]
edition = "2021"
description = "Rust-powered collection of financial functions for Python."
readme = "README.md"
homepage = "https://github.com/Anexen/pyxirr"
license = "Unlicense"
keywords = [
    "fast",
    "financial",
    "xirr",
    "cashflow",
    "day count convention",
    "PME",
]
include = [
    "src/**",
    "docs/_inline/**",
    "Cargo.toml",
    "pyproject.toml",
    "LICENSE",
]

[lib]
name = "pyxirr"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
time = { version = "0.3", features = ["parsing", "macros"] }

[dev-dependencies]
assert_approx_eq = "1.1"
rstest = { version = "0.22.0", default-features = false }
