[package]
name = "pyxirr"
version = "0.10.8"
authors = ["Anexen"]
edition = "2021"
description = "Rust-powered collection of financial functions for Python."
readme = "README.md"
homepage = "https://github.com/Anexen/pyxirr"
license = "Unlicense"
keywords = [
    "python",
    "fast",
    "financial",
    "xirr",
    "cashflow",
    "day count convention",
    "PME",
]
include = [
    "src/**",
    "docs/_inline/**",
    "Cargo.toml",
    "pyproject.toml",
    "LICENSE",
]

[lib]
name = "pyxirr"
crate-type = ["rlib", "cdylib"]
doctest = false

[dependencies]
pyo3 = "0.25"
numpy = "0.25"
time = { version = "0.3", features = ["parsing", "macros"] }
ndarray = "0.15"

[dev-dependencies]
assert_approx_eq = "1.1"
rstest = { version = "0.26", default-features = false }
pyo3 = { version = "0.25", features = ["auto-initialize"] }

[features]
nonumpy = []
extension = ["pyo3/extension-module"]
abi = ["pyo3/abi3-py37"]
