[project]
name = "pyxirr"
description-content-type = "text/markdown; charset=UTF-8; variant=GFM"
requires-python = ">=3.7,<3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
include = [
    "pyproject.toml",
    "pyxirr.pyi",
    { path = "Cargo.toml", format = "sdist" },
    { path = "Cargo.lock", format = "sdist" },
    { path = ".cargo/*", format = "sdist" },
]
strip = true
