[package]
name = "pyxirr-core"
version = "0.0.0"
edition = "2021"

[dependencies]
time = { version = "0.3", features = ["parsing", "macros"] }
ndarray = { version = "0.15", optional = true }
pyo3 = { version = "0.20", optional = true }
numpy = { version = "0.20", optional = true }

[features]
vectorization = ["ndarray"]
python = ["pyo3", "numpy"]
